<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vacao</string>
    <string name="welcome">Welcome!</string>
    <string name="button_stock_manager">Stock Manager</string>
    <string name="button_activities_manager">Actvities Manager</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stock_manager"></string>
    <string name="cattle">Cattle</string>
    <string name="button_new_cattle">Add New Cattle</string>
    <string name="button_view_cattle_details">View Animal Details</string>
    <string name="button_edit_cattle">Edit Cattle Information</string>
    <string name="vaccine">Vaccine</string>
    <string name="button_new_vaccine">Add New Vaccine</string>
    <string name="button_view_vaccine_details">View Vaccine Details</string>
    <string name="button_edit_vaccine">Edit Vaccine Information</string>
    <string name="insemination_bull">Insemination Bull</string>
    <string name="button_new_bull">Add New Bull</string>
    <string name="button_view_bull_details">View Bull Details</string>
    <string name="button_edit_bull">Edit Bull Information</string>
    <string name="title_activity_activities_manager">Activities Manager</string>
    <string name="title_activity_cattle_manager">Cattle Manager</string>
    <string name="title_activity_bull_manager">Bull Manager</string>
    <string name="title_activity_vaccine_manager">Vaccine Manager</string>
    <string name="vaccination">Vaccination</string>
    <string name="palpation">Palpation</string>
    <string name="insemination">Insemination</string>
    <string name="tagging">Tagging</string>
    <string name="new_activity">Add New Activity</string>
    <string name="title_activity_new_cattle">New Cattle</string>
    <string name="title_activity_edit_cattle">Edit Cattle</string>
    <string name="title_activity_cattle_detail">Cattle Details</string>
    <string name="identification">Identification</string>
    <string name="description">Description</string>
    <string name="tag">Cattle Tag</string>
    <string name="stamp">Cattle Stamp</string>
    <string name="comment">Comment</string>
    <string name="color">Color</string>
    <string name="breed">Breed</string>
    <string name="type">Type</string>
    <string name="horn">Horn</string>
    <string name="add">Add</string>
    <string name="title_activity_control_manager">ControlManager</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="welcome_splash">Welcome Breeder!!!!</string>
    <string name="title_activity_t">T</string>
    <string name="title_activity_te">Te</string>
    <string name="title_activity_tes">Tes</string>
    <string name="title_activity_stock_tab_fragment">StockTabFragment</string>
    <string name="title_activity_stock_list_fragment">StockListFragment</string>

</resources>