<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent" 
>

<RelativeLayout
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tag"
        android:layout_below="@+id/tag"
        android:layout_marginTop="15dp"
        android:hint="@string/stamp"
        android:ems="10" />
    <EditText
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/breed"
        android:layout_below="@+id/breed"
        android:layout_marginTop="15dp"
        android:hint="@string/type"
        android:ems="10" />
    <EditText
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_below="@+id/type"
        android:layout_marginTop="15dp"
        android:hint="@string/color"
        android:ems="10" />
    <EditText
        android:id="@+id/horn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/color"
        android:layout_below="@+id/color"
        android:layout_marginTop="15dp"
        android:hint="@string/horn"
        android:ems="10" />
    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horn"
        android:layout_below="@+id/horn"
        android:layout_marginTop="15dp"
        android:hint="@string/comment"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/identification"/>

    <EditText
        android:id="@+id/breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stamp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:hint="@string/breed"
        android:ems="10" />

    <EditText
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/tag"
        android:ems="10" />
    

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onMyButtonClick"
        android:text="@string/add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/stamp"
        android:layout_marginTop="20dp"
        android:text="@string/description" />

</RelativeLayout>
</ScrollView>
